--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
+    "@types/lodash": "^4.14.120",
     "@types/node": "^10.7.1",
     "@types/supertest": "^2.0.5",
     "jest": "^23.5.0",
