start to implement controller

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
+    "@nestjs/swagger": "^2.5.1",
     "dotenv": "^6.2.0",
     "lodash": "^4.17.11",
     "reflect-metadata": "^0.1.12",
