--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
+    "@nestjs/graphql": "^5.5.1",
     "@nestjs/swagger": "^2.5.1",
+    "apollo-server-express": "^2.3.1",
     "dotenv": "^6.2.0",
+    "graphql": "^14.1.1",
+    "graphql-tools": "^4.0.3",
     "lodash": "^4.17.11",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
