--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apollo-server-express": "^2.3.1",
     "dotenv": "^6.2.0",
     "graphql": "^14.1.1",
+    "graphql-subscriptions": "^1.0.0",
     "graphql-tools": "^4.0.3",
     "lodash": "^4.17.11",
     "reflect-metadata": "^0.1.12",
