--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
     "@nestjs/graphql": "^5.5.1",
+    "@nestjs/microservices": "^5.6.2",
     "@nestjs/swagger": "^2.5.1",
     "apollo-server-express": "^2.3.1",
     "dotenv": "^6.2.0",
@@ -30,6 +31,7 @@
     "graphql-subscriptions": "^1.0.0",
     "graphql-tools": "^4.0.3",
     "lodash": "^4.17.11",
+    "mqtt": "^2.18.8",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
@@ -44,6 +46,7 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
     "@types/lodash": "^4.14.120",
+    "@types/mqtt": "^2.5.0",
     "@types/node": "^10.7.1",
     "@types/supertest": "^2.0.5",
     "jest": "^23.5.0",
