--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "graphql": "^14.1.1",
     "graphql-subscriptions": "^1.0.0",
     "graphql-tools": "^4.0.3",
+    "graphql-type-json": "^0.2.1",
     "lodash": "^4.17.11",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
@@ -43,6 +44,7 @@
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
+    "@types/graphql-type-json": "^0.1.3",
     "@types/lodash": "^4.14.120",
     "@types/node": "^10.7.1",
     "@types/supertest": "^2.0.5",
