--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "rxjs": "^6.2.2",
     "typescript": "^3.0.1",
     "zcl-packet": "git+https://github.com/Koenkk/zcl-packet.git#fbd8c936bbd4be0597ad3e934be0ca722b0128a6",
+    "zigbee-service": "^0.0.1",
     "zigbee-shepherd": "git+https://github.com/Koenkk/zigbee-shepherd.git#ce52ac4131e2a505af6197b4a26d2b5360e4eb80",
     "zigbee-shepherd-converters": "^7.0.2"
   },
@@ -43,8 +44,8 @@
     "@nestjs/testing": "^5.1.0",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.1",
     "@types/graphql-type-json": "^0.1.3",
+    "@types/jest": "^23.3.1",
     "@types/lodash": "^4.14.120",
     "@types/node": "^10.7.1",
     "@types/supertest": "^2.0.5",
